fixed lightbox margins and overflow

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ h6 {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
-    max-height: 100%;
+    max-width: 100%;
 }
 
 /* Create four equal columns that sits next to each other */
@@ -142,9 +142,8 @@ h6 {
     align-items: center;
     position: absolute;
     top: -100%;
-    width: 100%;
+    max-width: 100%;
     background: rgba(0, 0, 0, .7);
-    width: 100%;
     opacity: 0;
     transition: opacity .5s ease-in-out;
     overflow: hidden;
@@ -152,9 +151,9 @@ h6 {
 }
 
 /* Styles the lightbox image, centers it vertically and horizontally, adds the zoom-in transition and makes it responsive using a combination of margin and absolute positioning */
+
 .lightbox-target img {
     margin: auto;
-    /*position: absolute;*/
     top: 0;
     left: 0;
     right: 0;
@@ -171,6 +170,7 @@ h6 {
     margin: 10px;
     text-shadow: 2px 2px black;
 }
+
 
 /* Styles the close link, adds the slide down transition */
 
@@ -221,8 +221,10 @@ a.lightbox-close:after {
 .lightbox-target:target {
     opacity: 1;
     top: 0;
+    left: 0;
+    right: 0;
     bottom: 0;
-    /*overflow: scroll;*/
+    overflow: hidden;
 }
 
 .lightbox-target:target img {
